--- a/views/base.pug
+++ b/views/base.pug
@@ -7,7 +7,7 @@ html
         link(rel='shortcut icon' type='image/png' href='img/favicon.png')
         link(href="https://fonts.googleapis.com/css?family=Lato:300,300i,700" rel="stylesheet")
 
-        title Natours 
+        title Natours | #{title}
 
 
 
@@ -16,4 +16,8 @@ html
         include _header 
 
         //CONTENT
+        block content
+            h1 This is a placeholder
         
+        //FOOTER
+        include _footer
