--- a/views/_header.pug
+++ b/views/_header.pug
@@ -3,7 +3,7 @@ header(class='header')
     a.nav__el(href='#') All tours
 
   .header__logo
-    img(src='img/logo-white.png' alt='Natours logo')
+    img(src='/img/logo-white.png' alt='Natours logo')
   
   nav.nav.nav--user
     //- a(href='#' class='nav__el') My bookings
