--- a/views/_header.pug
+++ b/views/_header.pug
@@ -1,17 +1,18 @@
 header(class='header')
   nav.nav.nav--tours
-    a.nav__el(href='#') All tours
+    a.nav__el(href='/') All tours
 
   .header__logo
     img(src='/img/logo-white.png' alt='Natours logo')
   
   nav.nav.nav--user
-    //- a(href='#' class='nav__el') My bookings
-    //- a(href='#' class='nav__el')
-    //-   img(src='img/user.jpg' alt='User photo' class='nav__user-img')
-    //-   span Jonas
+    if user
+      a.nav__el.nav__el--logout Log out
+      a.nav__el(href='#')
+        img.nav__user-img(src=`img/users/${user.photo}` alt=`Photo of ${user.name}`)
+        span= user.name.split(' ')[0]
           
-
-    button.nav__el Log in
-    button.nav__el.nav__el--cta Sign up
+    else
+      a.nav__el(href='/login') Log in
+      a.nav__el.nav__el--cta(href='/signup') Sign up
 
