added signup page

--- a/dev-data/templates/loginTemplate.pug
+++ b/dev-data/templates/loginTemplate.pug
@@ -8,5 +8,7 @@ main.main
       .form__group.ma-bt-md
         label.form__label(for='password') Password
         input#password.form__input(type='password', placeholder='••••••••', required, minlength='8')
+        label.form__label(for='password-confirm') Password Confirm
+        input#password-confirm.form__input(type='password', placeholder='••••••••', required, minlength='8')
       .form__group
         button.btn.btn--green Login
